All new controller management